--- a/results/failed_test_stories.yml
+++ b/results/failed_test_stories.yml
@@ -6,7 +6,7 @@ stories:
   - action: utter_greet
   - action: action_listen  # predicted: utter_user_what_do_you_need
   - intent: mood_great
-  - action: utter_happy  # predicted: utter_say_ok
+  - action: utter_happy  # predicted: date_query
   - action: action_listen  # predicted: action_default_fallback
 - story: happy path 2 (.\tests\test_stories.yml)
   steps:
@@ -14,7 +14,7 @@ stories:
   - action: utter_greet
   - action: action_listen  # predicted: utter_user_what_do_you_need
   - intent: mood_great
-  - action: utter_happy  # predicted: utter_say_ok
+  - action: utter_happy  # predicted: date_query
   - action: action_listen  # predicted: action_default_fallback
   - intent: goodbye
   - action: utter_goodbye
@@ -28,7 +28,7 @@ stories:
   - action: utter_did_that_help  # predicted: action_listen
   - intent: affirm
   - action: utter_happy  # predicted: utter_say_ok after action_unlikely_intent
-  - action: action_listen  # predicted: action_default_fallback
+  - action: action_listen  # predicted: utter_any_thing_else
 - story: sad path 2 (.\tests\test_stories.yml)
   steps:
   - intent: greet
@@ -38,7 +38,8 @@ stories:
   - action: utter_cheer_up  # predicted: action_default_fallback
   - action: utter_did_that_help  # predicted: action_listen
   - intent: deny
-  - action: utter_goodbye  # predicted: action_default_fallback after action_unlikely_intent
+  - action: utter_goodbye  # predicted: utter_name_query after action_unlikely_intent
+  - action: action_listen  # predicted: utter_user_what_do_you_need
 - story: sad path 3 (.\tests\test_stories.yml)
   steps:
   - intent: greet
@@ -48,8 +49,9 @@ stories:
   - action: utter_cheer_up  # predicted: action_default_fallback
   - action: utter_did_that_help  # predicted: action_listen
   - intent: deny
-  - action: utter_goodbye  # predicted: action_default_fallback after action_unlikely_intent
+  - action: utter_goodbye  # predicted: utter_name_query after action_unlikely_intent
+  - action: action_listen  # predicted: utter_user_what_do_you_need
 - story: bot challenge (.\tests\test_stories.yml)
   steps:
-  - intent: bot_challenge  # predicted: askname: are you a bot?
-  - action: utter_iamabot  # predicted: utter_say_ok
+  - intent: bot_challenge  # predicted: nlu_fallback: are you a bot?
+  - action: utter_iamabot  # predicted: action_default_fallback
